--- a/datamanager/templates/datamanager/loadManager.html
+++ b/datamanager/templates/datamanager/loadManager.html
@@ -54,7 +54,7 @@
         <div class="row">
             {% for table in tables %}
                 <div class="col-md-12 col-sm-12 col-xs-12">
-                    {% table id=table.id columns=6 as file_table %}
+                    {% table html_id=table.id columns=6 as file_table %}
                     {% panel title_icon=table.title_icon title=table.title body=file_table %}
                 </div>
             {% endfor %}
@@ -71,5 +71,5 @@
         <script src="{% static gentelella_static|add:"datatables.net-responsive-bs/js/responsive.bootstrap.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-scroller/js/dataTables.scroller.min.js" %}"></script>
     {% endwith %}
-    <script src="{% static "js/loadManager.js" %}"></script>
+    <script src="{% static "datamanager/js/loadManager.js" %}"></script>
 {% endblock %}
