--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -68,8 +68,9 @@
                   <li><a href=" {% url "shape:map" %} "> mapa</a></li>
                 </ul>
               </li>
+              {% if perms.localinfo.trips %}
               <li>
-                <a><i class="fa fa-line-chart"></i> Indicadores de viaje<span
+                <a><i class="fa fa-line-chart"></i> Viajes<span
                     class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                     <li><a href=" {% url "travel:graphs" %} ">Resumen</a></li>
@@ -88,6 +89,7 @@
                     <li><a href=" {% url "globalstat:detail" %} ">Detalle</a></li>
                 </ul>
               </li>
+              {% endif %}
             </ul>
           </div>
         </div>
