--- a/datamanager/templates/datamanager/loadManager.html
+++ b/datamanager/templates/datamanager/loadManager.html
@@ -1,5 +1,5 @@
 {% extends 'admin/base_site.html' %}
-{% load static panel bubble_message table tabs %}
+{% load static panel bubble_message table tabs header %}
 
 {% block title %}Administrador de carga de datos{% endblock %}
 
@@ -10,7 +10,6 @@
         <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
         <!-- iCheck -->
         <link href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}" rel="stylesheet">
-
         <link href="{% static gentelella_static|add:"datatables.net-bs/css/dataTables.bootstrap.min.css" %}"
               rel="stylesheet">
         <link href="{% static gentelella_static|add:"datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" %}"
@@ -39,17 +38,7 @@
 
 {% block content %}
     <div class="">
-        <div class="page-title">
-            <div class="title_left">
-                <h3>Administrador de carga de datos
-                    <small></small>
-                </h3>
-            </div>
-            <div class="title_right">
-            </div>
-        </div>
-        <div class="clearfix"></div>
-        <br/>
+    {% header "Administrador de carga de datos" %}
 
         <div class="row">
             {% for table in tables %}
@@ -70,6 +59,8 @@
         <script src="{% static gentelella_static|add:"datatables.net-responsive/js/dataTables.responsive.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-responsive-bs/js/responsive.bootstrap.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-scroller/js/dataTables.scroller.min.js" %}"></script>
+
+        <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
     {% endwith %}
     <script src="{% static "datamanager/js/loadManager.js" %}"></script>
 {% endblock %}
