--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -68,7 +68,7 @@
                   <li><a href=" {% url "shape:map" %} "> mapa</a></li>
                 </ul>
               </li>
-              {% if perms.localinfo.trips %}
+              {% if perms.localinfo.travel %}
               <li>
                 <a><i class="fa fa-line-chart"></i> Viajes<span
                     class="fa fa-chevron-down"></span></a>
@@ -81,6 +81,8 @@
                     {# <li><a href=" {% url "travel:data" %} ">Datos</a></li> #}
                 </ul>
               </li>
+              {% endif %}
+              {% if perms.localinfo.globalstat %}
               <li>
                 <a><i class="fa fa-clone"></i> Est. globales<span
                     class="fa fa-chevron-down"></span></a>
